--- a/src/FrontEnd/Style/Inicio.css
+++ b/src/FrontEnd/Style/Inicio.css
@@ -1,18 +1,74 @@
-
-
-.contenedor-Nav{
+.contenedor-inicio{
+    top: 0;
+    width: 100%;
+    height: 100%;
+}
+.portada{
+    top: 0;
+    position: sticky;
+    width: 100%;
+    min-height: 400px;
     display: flex;
-    flex-direction: row;
-    border: 1px solid #4d4d4d;
-    width: 50rem;
-    padding: 1rem;
-    border-radius: 30px;
-    justify-content: space-around;
+    justify-content: center;
     align-items: center;
+    margin-bottom: 50px;
 }
 
-img{
+.imagen-portada{
+    width: 100%;
     object-fit: cover;
+}
+
+.contenedor-Nav{
+    position: fixed; /* Hace que Nav se posicione sobre la imagen */
+    top: 20px;
+    border-radius: 18px;
+    width: 60%;
+    display: flex;
+    flex-direction: row;
+    height: 3rem;
+    padding: 1rem;
+    justify-content: space-between;
+    padding: 10px 50px;
+    align-items: center;
+    background-color: rgba(255, 255, 255, 0.8); /* Fondo semitransparente para mejor legibilidad */
+    z-index: 1;
+}
+
+.img{
     width: 3rem;
     height: 3rem;
+}
+
+.contenedor-Muestra{
+    width: 250px;
+    border: 1px solid #333333;
+    padding: 10px;
+    margin: 5px;
+    margin-top: 50px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 5px;
+    text-align: center;
+    max-height: 500px;
+
+}
+
+.img-Muestra{
+    object-fit: cover;
+    width: 200px;
+    height: 200px;
+}
+
+.contenedor-publicacion{
+    position: absolute;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    flex-direction: row;
+    flex-wrap: wrap;
+    z-index: -1;
 }
